--- a/wp-content/themes/test/style.css
+++ b/wp-content/themes/test/style.css
@@ -11,6 +11,7 @@
 	License URI: http://opensource.org/licenses/mit-license.php
 */
 
-@import url("styles/flexible-layout.css");
+@import url("styles/global.css");
 @import url("styles/one-column-text.css");
 @import url("styles/two-column-text.css");
+@import url("styles/projects.css");
