--- a/wp-content/themes/test/styles/global.css
+++ b/wp-content/themes/test/styles/global.css
@@ -1,6 +1,11 @@
-.flexible-layout {
-  padding-top: 40px;
-  padding-bottom: 40px;
+a {
+  text-decoration: none;
+  color: currentColor;
+}
+
+section {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .container {
@@ -12,6 +17,7 @@
 }
 
 .row {
+  display: flex;
   margin-left: -15px;
   margin-right: -15px;
 }
