Changes made for step 2 (Stacking columns and projects in mobile

--- a/wp-content/themes/test/styles/projects.css
+++ b/wp-content/themes/test/styles/projects.css
@@ -5,7 +5,8 @@
 .project-wrap .column {
   padding-top: 15px;
   padding-bottom: 15px;
-  width: 33.33%;
+  width: 90%;
+   margin: 0 auto;
 }
 
 .project-panel-inner {
