--- a/wp-content/themes/test/styles/global.css
+++ b/wp-content/themes/test/styles/global.css
@@ -18,6 +18,7 @@ section {
 
 .row {
   display: flex;
+  flex-direction: column;
   margin-left: -15px;
   margin-right: -15px;
 }
@@ -25,4 +26,12 @@ section {
 .column {
   padding-left: 15px;
   padding-right: 15px;
+}
+
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: 768px){
+  .row{
+    flex-direction: row;
+  }
 }
